eclipse-workspace/Surya Dev Org/src/objects/Temperature__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <formula>Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CityName__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( &apos;/resource/ImageInFormula&apos;, &apos;Image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <description>Test</description>
        <label>Patient Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Values__c</fullName>
        <label>Picklist Values</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptoms__c</fullName>
        <label>Symptoms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Surya</fullName>
                </value>
                <value>
                    <fullName>Pruthvi</fullName>
                </value>
                <value>
                    <fullName>Chits</fullName>
                </value>
                <value>
                    <fullName>Navya</fullName>
                </value>
                <value>
                    <fullName>Satti</fullName>
                </value>
                <value>
                    <fullName>Smarty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <label>Temperature1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temperature</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MakingFieldRequiredSelectingPicklistVal</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
TEXT(Picklist_Values__c) = &quot;Active&quot;, 
LEN(Text_Area__c) = 0), True, False)</errorConditionFormula>
        <errorDisplayField>Text_Area__c</errorDisplayField>
        <errorMessage>This Field is reuired if you select &quot;Active&quot;</errorMessage>
    </validationRules>
</CustomObject>